# TestGHAS

./: CMakeLists.txt  Dockerfile  README.md  build_and_run.sh  install.sh  main.cpp  test.cpp
.github/workflows/: codeql.yml
dependencies/: gtest.cmake
